  Qt::TimerType timerType, QObject *object) = 0;'

  * QAbstractEventDispatcher::TimerInfo is no longer a QPair<int, int>. It is
  now a struct with 3 members: struct TimerInfo { int timerId; int interval;
  Qt::TimerType timerType; }; Reimplementations of
  QAbstractEventDispatcher::registeredTimers() will need to be updated to pass
  3 arguments to the TimerInfo constructor (instead of 2).

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

* layoutAboutToBeChanged is no longer emitted by QAbstractItemModel::beginMoveRows.
  layoutChanged is no longer emitted by QAbstractItemModel::endMoveRows. Proxy models
  should now also connect to (and disconnect from) the rowsAboutToBeMoved and
  rowsMoved signals.

* The default value of the property QSortFilterProxyModel::dynamicSortFilter was
  changed from false to true.

* QFileSystemWatcher is now able to return failure in case of errors whilst
  altering the watchlist in both the singular and QStringList overloads of
  addPath and removePath.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via