@@ -108,9 +108,6 @@ struct Q_CORE_EXPORT QUuid
     QUuid(const QString &);
     QUuid(const char *);
     QString toString() const;
-#if QT_DEPRECATED_SINCE(5,0)
-    QT_DEPRECATED operator QString() const { return toString(); }
-#endif
     QUuid(const QByteArray &);
     QByteArray toByteArray() const;
 #endif
